# wic64-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  LICENSE.txt  README.md  make-release-tarball.sh  sdkconfig  version.cmake  wic64.cpp  wic64.h  wic64display.h  wic64webserver.h
components/OneButtonComponent/: CMakeLists.txt
legacy/: wic64.cpp  wic64.h  wic64webserver.h
test/: .gitignore  Makefile  main.asm  make-version.sh  universal.asm  util.asm  wic64.asm
test/tests/: echo.asm  get_ip.asm  noise.asm  post.asm  version.asm  wifi_info.asm
update/: Makefile  update.asm  update.php
wic64/: CMakeLists.txt  buttons.cpp  buttons.h  callback.h  client.cpp  client.h  clock.cpp  clock.h  command.cpp  command.h  connection.cpp  connection.h  data.cpp  data.h  display.cpp  display.h  httpClient.cpp  httpClient.h  led.cpp  led.h  main.cpp  main.h  protocol.cpp  protocol.h  request.cpp  request.h  service.cpp  service.h  settings.cpp  settings.h  tcpClient.cpp  tcpClient.h  url.cpp  url.h  userport.cpp  userport.h  util.cpp  util.h  utilities.cpp  utilities.h  (+6 more)
wic64/command/: echo.h
wic64/commands/: commands.cpp  commands.h  configured.cpp  configured.h  connect.cpp  connect.h  connected.cpp  connected.h  deprecated.cpp  deprecated.h  echo.cpp  echo.h  get.cpp  get.h  getIP.cpp  getIP.h  hardware.cpp  hardware.h  http.cpp  http.h  httpGet.cpp  httpGet.h  ip.cpp  ip.h  mac.cpp  mac.h  make-command.sh  reboot.cpp  reboot.h  rssi.cpp  rssi.h  scan.cpp  scan.h  server.cpp  server.h  ssid.cpp  ssid.h  status.cpp  status.h  tcp.cpp  (+15 more)
wic64/legacy/: legacy.ino  wic64.cpp  wic64.h
wic64/protocols/: extended.cpp  extended.h  legacy.cpp  legacy.h  standard.cpp  standard.h
