idf_component_register(
    INCLUDE_DIRS "."

    SRCS "wic64.cpp"
    SRCS "settings.cpp"
    SRCS "connection.cpp"
    SRCS "client.cpp"
    SRCS "userport.cpp"
    SRCS "service.cpp"
    SRCS "data.cpp"
    SRCS "request.cpp"
    SRCS "command.cpp"
    SRCS "commands/httpGet.cpp"
    SRCS "commands/getIP.cpp"
    SRCS "commands/scan.cpp"
    SRCS "commands/echo.cpp"
    SRCS "display.cpp"
    SRCS "webserver.cpp"
    SRCS "utilities.cpp"
    SRCS "main.cpp"
    SRCS "version.h"

    REQUIRES "wic64"
    REQUIRES "arduino"
    REQUIRES "Adafruit-GFX-Library"
    REQUIRES "Adafruit_BusIO"
    REQUIRES "Adafruit_SSD1306"
    REQUIRES "OneButtonComponent"
)
