idf_component_register(
    INCLUDE_DIRS "."

    SRCS "wic64.cpp"
    SRCS "settings.cpp"
    SRCS "connection.cpp"
    SRCS "httpClient.cpp"
    SRCS "tcpClient.cpp"
    SRCS "userport.cpp"
    SRCS "service.cpp"
    SRCS "data.cpp"
    SRCS "request.cpp"
    SRCS "command.cpp"
    SRCS "commands/commands.cpp"
    SRCS "commands/version.cpp"
    SRCS "commands/http.cpp"
    SRCS "commands/ip.cpp"
    SRCS "commands/server.cpp"
    SRCS "commands/scan.cpp"
    SRCS "commands/connect.cpp"
    SRCS "commands/time.cpp"
    SRCS "commands/timezone.cpp"
    SRCS "commands/ssid.cpp"
    SRCS "commands/rssi.cpp"
    SRCS "commands/mac.cpp"
    SRCS "commands/tcp.cpp"
    SRCS "commands/echo.cpp"
    SRCS "display.cpp"
    SRCS "webserver.cpp"
    SRCS "clock.cpp"
    SRCS "led.cpp"
    SRCS "buttons.cpp"
    SRCS "utilities.cpp"
    SRCS "main.cpp"
    SRCS "../generated-version.h"

    REQUIRES "wic64"
    REQUIRES "arduino"
    REQUIRES "Adafruit-GFX-Library"
    REQUIRES "Adafruit_BusIO"
    REQUIRES "Adafruit_SSD1306"
    REQUIRES "OneButtonComponent"
)
