idf_component_register(
    INCLUDE_DIRS "."

    SRCS "wic64.cpp"
    SRCS "settings.cpp"
    SRCS "connection.cpp"
    SRCS "httpClient.cpp"
    SRCS "tcpClient.cpp"
    SRCS "userport.cpp"
    SRCS "service.cpp"
    SRCS "data.cpp"
    SRCS "url.cpp"
    SRCS "request.cpp"
    SRCS "protocol.cpp"
    SRCS "protocols/legacy.cpp"
    SRCS "protocols/standard.cpp"
    SRCS "protocols/extended.cpp"
    SRCS "command.cpp"
    SRCS "commands/commands.cpp"
    SRCS "commands/version.cpp"
    SRCS "commands/http.cpp"
    SRCS "commands/ip.cpp"
    SRCS "commands/server.cpp"
    SRCS "commands/scan.cpp"
    SRCS "commands/connect.cpp"
    SRCS "commands/configured.cpp"
    SRCS "commands/connected.cpp"
    SRCS "commands/time.cpp"
    SRCS "commands/timezone.cpp"
    SRCS "commands/ssid.cpp"
    SRCS "commands/rssi.cpp"
    SRCS "commands/mac.cpp"
    SRCS "commands/tcp.cpp"
    SRCS "commands/test.cpp"
    SRCS "commands/update.cpp"
    SRCS "commands/reboot.cpp"
    SRCS "commands/deprecated.cpp"
    SRCS "commands/undefined.cpp"
    SRCS "commands/status.cpp"
    SRCS "commands/timeout.cpp"
    SRCS "display.cpp"
    SRCS "webserver.cpp"
    SRCS "clock.cpp"
    SRCS "led.cpp"
    SRCS "buttons.cpp"
    SRCS "utilities.cpp"
    SRCS "main.cpp"
    SRCS "../generated-version.h"

    EMBED_TXTFILES "../wic64-net.pem"

    REQUIRES "wic64"
    REQUIRES "esp-tls" # needs to be included *before* arduino, else arduino hijacks esp_tls.h
    REQUIRES "arduino"
    REQUIRES "Adafruit-GFX-Library"
    REQUIRES "Adafruit_BusIO"
    REQUIRES "Adafruit_SSD1306"
    REQUIRES "OneButtonComponent"
)
